--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,25 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <!-- meta tags for SEO -->
+    <meta name="description" content="Parth Shiralkar's music portfolio">
+    <meta name="keywords" content="music, portfolio, parth shiralkar, hTrap, remixes, originals">
+    <meta name="author" content="Parth Shiralkar">
+    <meta property="og:title" content="Music by hTrap">
+    <meta property="og:description" content="Parth Shiralkar's music portfolio">
+    <meta property="og:image" content="<%= htmlWebpackPlugin.options.image %>">
+    <meta property="og:url" content="https://music.parth.ninja">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@hTrapMusic">
+    <meta name="twitter:title" content="Music by hTrap">
+    <meta name="twitter:description" content="Parth Shiralkar's music portfolio">
+    <meta name="twitter:image" content="<%= htmlWebpackPlugin.options.image %>">
+    <meta name="twitter:image:alt" content="Music by hTrap">
+    <meta name="twitter:url" content="https://music.parth.ninja">
+    <meta name="theme-color" content="#000000">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
